Add 'display' subdirectory and code.
Several C programs to drive the Wincor-Nixdorf BA63 customer display. Note use of odd parity.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 mouse/msmouse
 mouse/pcmouse
 spaceball/sb4000
+display/ttc
+display/ba63
+display/ba63chars
+display/dmm2ba63
+display/ba63bmmf
+display/ba63dmmf
+display/bmmf13
+display/mfuk13
+display/ba63bblug
+display/bv13
+display/ba63bv2014
